--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test-local-first-remote-later </title>
+    <title>test-local-first-remote-later</title>
 </head>
 <body>
     <p>How to create a repositopy on Gihhab when local project exists</p>
+    <p>How to track changes</p>
 </body>
 </html>
